--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,14 @@ build/
 
 # LibreOffice temp file
 .~lock.*#
+
+# emacs
+*~
+\#*\#
+/.emacs.desktop
+/.emacs.desktop.lock
+.elc
+auto-save-list
+tramp
+.\#*
+
