gradle wrapperタスク追加

--- a/build.gradle
+++ b/build.gradle
@@ -45,3 +45,7 @@ jar {
                    'Implementation-Version': version
     }
 }
+
+task wrapper(type: Wrapper) {
+    gradleVersion = '2.4'
+}
