single jar作成方法追加

--- a/build.gradle
+++ b/build.gradle
@@ -31,19 +31,20 @@ repositories {
 dependencies {
   compile 'org.codehaus.groovy:groovy-all:2.4.3'
   compile 'com.google.code.gson:gson:2.3.1'
-  compile 'com.h2database:h2:1.4.187'
+  testCompile 'com.h2database:h2:1.4.187'
   testCompile 'org.spockframework:spock-core:1.0-groovy-2.4'
   compile fileTree(dir: 'libs', include: '*.jar')
 }
 
 sourceCompatibility = 1.7
 targetCompatibility = 1.7
-version = '1.0'
+version = '0.1'
 jar {
     manifest {
         attributes 'Implementation-Title': 'kintone Connector for Talend core',
                    'Implementation-Version': version
     }
+    from configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
 }
 
 task wrapper(type: Wrapper) {
