--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ dependencies {
   compile 'org.codehaus.groovy:groovy-all:2.4.3'
   compile 'com.google.code.gson:gson:2.3.1'
   testCompile 'com.h2database:h2:1.4.187'
+  testCompile 'mysql:mysql-connector-java:5.1.35'
   testCompile 'org.spockframework:spock-core:1.0-groovy-2.4'
   compile fileTree(dir: 'libs', include: '*.jar')
 }
