ユーザ名/パスワード認証での接続を実装

--- a/src/tKintoneOutput/tKintoneOutput_messages.properties
+++ b/src/tKintoneOutput/tKintoneOutput_messages.properties
@@ -1,7 +1,9 @@
 LONG_NAME=kintone output component
 
 KINTONE.NAME=kintone settings
-APITOKEN.NAME=API token
+APITOKEN.NAME=API token (token or userName + password required)
+USERNAME.NAME=kintone userName (token or userName + password required)
+PASSWORD.NAME=kintone password (token or userName + password required)
 SUBDOMAIN.NAME=Sub domain
 APPID.NAME=kintone AppId
 GUEST_SPACEID.NAME=Guest SpaceId (optional)
